--- a/sport-tournament/src/main/resources/application.properties
+++ b/sport-tournament/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sportDB
 spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Jwt config
+security.jwt.secret-key=To8+9rW3wGhlxBR86EfqmT+akSWsK6PT0s4UpGmCr8E=
+security.jwt.expiration-time=3600000
