--- a/sport-tournament/src/main/resources/application.properties
+++ b/sport-tournament/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=sport-tournament
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=mysql
