--- a/sport-tournament/src/main/resources/application.properties
+++ b/sport-tournament/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=sport-tournament
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=mysql
@@ -16,3 +16,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #Jwt config
 security.jwt.secret-key=To8+9rW3wGhlxBR86EfqmT+akSWsK6PT0s4UpGmCr8E=
 security.jwt.expiration-time=3600000
+
+# Flyway config
+spring.flyway.enabled=true
