adding swagger-ui

--- a/sport-tournament/src/main/resources/application.properties
+++ b/sport-tournament/src/main/resources/application.properties
@@ -19,3 +19,6 @@ security.jwt.expiration-time=3600000
 
 # Flyway config
 spring.flyway.enabled=true
+
+# Enable Swagger UI
+springfox.documentation.swagger-ui.enabled=true
