Creating Tournament, Location and Venue entities

--- a/sport-tournament/src/main/resources/application.properties
+++ b/sport-tournament/src/main/resources/application.properties
@@ -19,6 +19,7 @@ security.jwt.expiration-time=3600000
 
 # Flyway config
 spring.flyway.enabled=true
+spring.flyway.location = classpath: db/migration
 
 # Enable Swagger UI
 springfox.documentation.swagger-ui.enabled=true
