--- a/sport-tournament/src/main/resources/application.properties
+++ b/sport-tournament/src/main/resources/application.properties
@@ -23,3 +23,13 @@ spring.flyway.location = classpath: db/migration
 
 # Enable Swagger UI
 springfox.documentation.swagger-ui.enabled=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.username=fmitournament@gmail.com
+spring.mail.password=fcvr kbdg gjsk nlfy
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+
