--- a/sport-tournament/src/main/resources/application.properties
+++ b/sport-tournament/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.application.name=sport-tournament
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
@@ -15,7 +17,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Jwt config
 security.jwt.secret-key=To8+9rW3wGhlxBR86EfqmT+akSWsK6PT0s4UpGmCr8E=
-security.jwt.expiration-time=3600000
+security.jwt.expiration-time=36000000
 
 # Flyway config
 spring.flyway.enabled=true
